app/assets/stylesheets/main-chrome.less
body,html
{
  min-height: 100%;
  height: 100%;
}

#body-content
{
  padding-top: @page-header-height;
}

#page-header
{
  position: absolute;
  top: 0;
  left: @asside-width;
  right: 0;
  background: @body-bg;
  border: 0;

  .navbar-right
  {
    margin-right: @grid-gutter-width / 2;
  }

  ul
  {
    margin-bottom: 0;
  }

  .share-code
  {
    width: 200px;
    // background: darken( @navbar-inverse-bg, 12% );
    // border-color: darken( @btn-primary-border, 8% );
    color: @text-muted;
  }

  .btn
  {
    .text-overflow;
    max-width: 100px;
    // .box-shadow( inset 0 -1px 1px rgba( 255, 255, 255, .10 ) );
  }

  @media( max-width: 818px )
  {
    .share-code, .input-group
    {
      width: 150px;
    }

  }

  .navbar-collapse
  {
    padding-left: @grid-gutter-width / 2;
  }

  .icon-bar
  {
    background: @brand-primary;
  }
}

#brand
{
  color: mix( @body-bg, @text-color, 75% );
  display: block;
  margin: 0 0 24px 0;
  font-size: @font-size-h4;
  text-shadow: 0 1px #FFF;
  z-index: 20;
  position: relative;

  @media( max-width: @screen-xs-max )
  {
    position: absolute;
    display: none;
  }
}


.page-alerts
{
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: @zindex-navbar; 

  .alert
  {
    margin: 0;
  }


  &.slide
  {
    position: fixed;

    &.up
    {
      bottom: -5em;
      top: auto;
    }

    &.up.in
    {
      bottom: 0;
      top: auto;
      border-top: solid 1px #CCC;
      .box-shadow( 0 -1px 2px rgba( 0, 0, 0, .15 ) );
    }
  }
}

#main-asside
{

  width: @asside-width;
  position: fixed;
  left: 0;
  bottom: @asside-ad-height + @grid-gutter-width;
  top: 0;
  padding: @grid-gutter-width / 2 @grid-gutter-width / 2 @grid-gutter-width * 2;
  background: @asside-bg;
  .box-shadow( inset -1px 0 3px rgba( 0, 0, 0, .075 ) );
  border-right: solid 1px darken( @body-bg, 15% );
  overflow: auto;

  .page-title
  {
    max-width: 100%;
    overflow: hidden;
    margin-top: 0;
  }

  &:after, &:before
  {
    content: " ";
    position: fixed;
    bottom: @asside-ad-height + @grid-gutter-width;
    left: 0;
    width: @asside-width;
    height: @grid-gutter-width * 2;
    #gradient.vertical( transparent, @asside-bg );
    z-index: 10;
    pointer-events: none;
  }

  &:before
  {
    top: 0;
    bottom: auto;
    #gradient.vertical( @asside-bg, transparent );
  }

  hr
  {
    margin-left: -@grid-gutter-width / 2;
    margin-right: -@grid-gutter-width / 2;
    background: #FFF;
    height: 1px;
  }
}

#main-content
{
  padding: @grid-gutter-width / 2 @grid-gutter-width / 2  @grid-gutter-width / 2 @asside-width + @grid-gutter-width / 2 ;
  min-height: 300px;
  overflow: hidden;
  max-width: 100%;

  .page-title
  {
    margin-top: 0;
  }
}

#page-actions-mobile
{
  padding-left: @grid-gutter-width / 2;
}

@media( max-width: @screen-xs-max )
{
  #main-asside
  {
    position: static;
    width: auto;
    padding: @grid-gutter-width / 2;
    display: block;
    border-right: 0;
    border-top: solid 1px darken( @body-bg, 15% );
    .box-shadow( inset 0 1px 3px rgba( 0, 0, 0, .075 ) );

    &:before, &:after
    {
      display: none;
    }
  }

  #main-content
  {
    padding: @grid-gutter-width / 2;
  }

  #page-header
  {
    left: 0;

    .share-group
    {
      display: none;
    }

    #page-actions
    {
      display: none;
    }
  }
}

